--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="icon" href="icon.png" />
     </head>
 
-    <body>        
+    <body>
         <div class="header">
             <a href="https://wookiee.ch/columbus/">
                 <img src="assets/logo-color-small.png" alt="logo" />
@@ -51,15 +51,13 @@
             </div-->
             <div
                 id="status-info"
-                style="text-align: center; position: relative;"
+                style="text-align: center; position: relative"
             >
-               
-
                 <button
                     class="uk-button uk-button-primary uk-button-small"
                     uk-toggle="target: #select-roster"
                     type="button"
-                    style="transform: translate(0, 85%);"
+                    style="transform: translate(0, 85%)"
                 >
                     Roster
                 </button>
@@ -87,13 +85,17 @@
                         </div>
                         <div class="uk-modal-footer uk-text-right">
                             <button
-                                class="uk-button uk-button-default uk-modal-close"
+                                class="
+                                    uk-button uk-button-default uk-modal-close
+                                "
                                 type="button"
                             >
                                 Cancel
                             </button>
                             <button
-                                class="uk-button uk-button-primary uk-modal-close"
+                                class="
+                                    uk-button uk-button-primary uk-modal-close
+                                "
                                 type="button"
                                 id="save-roster"
                             >
@@ -105,7 +107,7 @@
                 <div class="info">
                     <div
                         class="info-message"
-                        style="transform: translate(0, 10%);"
+                        style="transform: translate(0, 10%)"
                     >
                         blocks loaded: <span id="loaded-blocks"></span>
                     </div>
@@ -145,8 +147,8 @@
 
         <footer>
             <span
-                >© DEDIS 2018 - by Rosa Jose Sara, Pilar Marxer, Lucas Trognon, Sophia Artioli Anthony Iozzia
-                and Julian von Felten</span
+                >© DEDIS 2018 - by Rosa Jose Sara, Pilar Marxer, Lucas Trognon,
+                Sophia Artioli Anthony Iozzia and Julian von Felten</span
             >
             <span> v.1.0.11</span>
             <a href="https://github.com/dedis/columbus-united"
