Updates production deployment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
         <div class="header">
-            <a href="https://wookiee.ch/columbus/">
+            <a href="/">
                 <img src="assets/logo-color-small.png" alt="logo" />
             </a>
 
