Create proper release
- copy to github.com/c4dt
- release a .tgz

--- a/index.html
+++ b/index.html
@@ -85,17 +85,13 @@
                         </div>
                         <div class="uk-modal-footer uk-text-right">
                             <button
-                                class="
-                                    uk-button uk-button-default uk-modal-close
-                                "
+                                class="uk-button uk-button-default uk-modal-close"
                                 type="button"
                             >
                                 Cancel
                             </button>
                             <button
-                                class="
-                                    uk-button uk-button-primary uk-modal-close
-                                "
+                                class="uk-button uk-button-primary uk-modal-close"
                                 type="button"
                                 id="save-roster"
                             >
